--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,14 @@ certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 comm==0.2.2
+contourpy==1.3.1
+cycler==0.12.1
 debugpy==1.8.12
 decorator==5.1.1
 defusedxml==0.7.1
 executing==2.2.0
 fastjsonschema==2.21.1
+fonttools==4.57.0
 fqdn==1.5.1
 h11==0.14.0
 httpcore==1.0.7
@@ -28,6 +31,7 @@ ipython==8.32.0
 isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.5
+JLDracula==0.2.0
 joblib==1.4.2
 json5==0.10.0
 jsonpointer==3.0.0
@@ -42,7 +46,9 @@ jupyter_server_terminals==0.5.3
 jupyterlab==4.3.5
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
+kiwisolver==1.4.8
 MarkupSafe==3.0.2
+matplotlib==3.10.1
 matplotlib-inline==0.1.7
 mistune==3.1.1
 nbclient==0.10.2
@@ -58,6 +64,7 @@ pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
+pillow==11.2.1
 platformdirs==4.3.6
 prometheus_client==0.21.1
 prompt_toolkit==3.0.50
@@ -66,6 +73,7 @@ ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==2.22
 Pygments==2.19.1
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-json-logger==3.2.1
 pytz==2025.1
