--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ httpx==0.28.1
 idna==3.10
 ipykernel==6.29.5
 ipython==8.32.0
+ipywidgets==8.1.6
 isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.5
@@ -46,6 +47,8 @@ jupyter_server_terminals==0.5.3
 jupyterlab==4.3.5
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.14
+kagglehub==0.3.11
 kiwisolver==1.4.8
 MarkupSafe==3.0.2
 matplotlib==3.10.1
@@ -96,6 +99,7 @@ terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
 tornado==6.4.2
+tqdm==4.67.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
@@ -106,3 +110,4 @@ wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+widgetsnbextension==4.0.14
