--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ cycler==0.12.1
 debugpy==1.8.12
 decorator==5.1.1
 defusedxml==0.7.1
+et_xmlfile==2.0.0
 executing==2.2.0
 fastjsonschema==2.21.1
 fonttools==4.57.0
@@ -61,6 +62,7 @@ nest-asyncio==1.6.0
 notebook==7.3.2
 notebook_shim==0.2.4
 numpy==2.2.3
+openpyxl==3.1.5
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
@@ -74,6 +76,7 @@ prompt_toolkit==3.0.50
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==19.0.1
 pycparser==2.22
 Pygments==2.19.1
 pyparsing==3.2.3
@@ -89,6 +92,7 @@ rfc3986-validator==0.1.1
 rpds-py==0.22.3
 scikit-learn==1.6.1
 scipy==1.15.2
+seaborn==0.13.2
 Send2Trash==1.8.3
 setuptools==75.8.0
 six==1.17.0
